--- a/my_words/lib/l10n/app_en.arb
+++ b/my_words/lib/l10n/app_en.arb
@@ -1,17 +1,42 @@
 {
-  "menu": "Menu",
-  "favoriteWords": "Favorite Words",
-  "anagramGame": "Anagram Game",
-  "learningStatistics": "Learning Statistics",
+  "favorite_words": "Favorite Words",
+  "anagram_game": "Anagram Game",
   "quiz": "Quiz",
-  "fillInTheBlanksGame": "Fill in the Blanks Game",
-  "wordCategories": "Word Categories",
-  "chooseTheme": "Choose Theme",
-  "save": "Save",
-  "exampleSentence": "Example Sentence",
+  "fill_in_the_blank_game": "Fill in the Blank Game",
+  "word_categories": "Word Categories",
+  "select_theme": "Select Theme",
+  "menu": "Menu",
+  "sentence": "Sentence",
+  "app_features": "App Features",
+  "play_anagram_game": "Play Anagram Game",
+  "add_edit_delete_words": "Add, Edit, and Delete Words",
+  "view_your_statistics": "View Your Statistics",
+  "determine_your_favorite_words": "Determine Your Favorite Words",
+  "play_fill_in_the_blank_game": "Play Fill in the Blank Game",
+  "examine_your_learning_statistics": "Examine Your Learning Statistics",
+  "create_word_categories": "Create Word Categories",
+  "close": "Close",
+  "english": "English",
+  "mother_tongue": "Mother Tongue",
+  "example_sentence": "Example Sentence",
   "category": "Category",
-  "uncategorized": "*Words without a category will be saved in the 'Uncategorized' category.*",
-  "answer": "Answer",
+  "save": "Save",
+  "words_without_category": "Words without category will be saved to 'Uncategorized' category",
+  "add_new_word": "Add New Word",
+  "categories": "Categories",
+  "reply": "Reply",
   "score": "Score",
-  "writeYourAnswerHere": "Write your answer here"
+  "word": "Word",
+  "write_your_answer_here": "Write Your Answer Here",
+  "words_learned_over_time": "Words Learned Over Time",
+  "learning_statistic": "Learning Statistic",
+  "attention": "Attention",
+  "add_at_least_3_words": "You should add at least 3 words before starting the Quiz, Anagram and Fill in the blank games",
+  "your_answer": "Your Answer",
+  "question": "Question",
+  "alert": "ALERT",
+  "before_games": "Before you start the QUIZ, SPACE FILL and ANAGRAM games",
+  "must_add_words": "You must add at least 3 words.",
+  "press_plus": "'+' Press",
+  "try_adding_words": "Try Adding Words to the Screen."
 }
