--- a/my_words/lib/l10n/app_tr.arb
+++ b/my_words/lib/l10n/app_tr.arb
@@ -1,17 +1,42 @@
 {
-  "menu": "Menü",
-  "favoriteWords": "Favori Kelimeler",
-  "anagramGame": "Anagram Oyunu",
-  "learningStatistics": "Öğrenme İstatistikleri",
+  "favorite_words": "Favori Kelimeler",
+  "anagram_game": "Anagram Oyunu",
   "quiz": "Quiz",
-  "fillInTheBlanksGame": "Boşluk Doldurma Oyunu",
-  "wordCategories": "Kelime Kategorileri",
-  "chooseTheme": "Tema Seç",
-  "save": "Kaydet",
-  "exampleSentence": "Örnek Cümle",
+  "fill_in_the_blank_game": "Boşluk Doldurma Oyunu",
+  "word_categories": "Kelime Kategorileri",
+  "select_theme": "Tema Seç",
+  "menu": "Menü",
+  "sentence": "Cümle",
+  "app_features": "Uygulama Özellikleri",
+  "play_anagram_game": "Anagram Oyunu Oynayın",
+  "add_edit_delete_words": "Kelimeler Ekleyin, düzenleyin, ve silin",
+  "view_your_statistics": "İstatistiklerinizi görüntüleyin",
+  "determine_your_favorite_words": "Favori Kelimelerinizi Belirleyin",
+  "play_fill_in_the_blank_game": "Boşluk Doldurma Oyunu Oynayın",
+  "examine_your_learning_statistics": "Öğrenme İstatistiklerinizi inceleyin",
+  "create_word_categories": "Kelime Kategorileri oluşturun",
+  "close": "Kapat",
+  "english": "İngilizce",
+  "mother_tongue": "Anadiliniz",
+  "example_sentence": "Örnek Cümle",
   "category": "Kategori",
-  "uncategorized": "*Kategori girilmeyen kelimeler 'Kategorisiz' adlı kategoriye kaydedilecektir.*",
-  "answer": "Cevapla",
+  "save": "Kaydet",
+  "words_without_category": "Kategori girilmeyen kelimeler 'Kategorisiz' adlı kategoriye kaydedilecektir",
+  "add_new_word": "Yeni Kelime Ekle",
+  "categories": "Kategoriler",
+  "reply": "Cevapla",
   "score": "Puan",
-  "writeYourAnswerHere": "Cevabınızı buraya yazınız"
+  "word": "Kelime",
+  "write_your_answer_here": "Cevabınızı Buraya Yazın",
+  "words_learned_over_time": "Zaman içinde öğrenilen kelimeler",
+  "learning_statistic": "Öğrenme İstatistiği",
+  "attention": "Dikkat",
+  "add_at_least_3_words": "Quiz, Anagram ve Boşluk doldurma oyunlarına başlamadan önce en az 3 kelime eklemelisiniz",
+  "your_answer": "Cevabınız",
+  "question": "Soru",
+  "alert": "Uyarı",
+  "before_games": "Quiz, Boşluk Doldurma ve Anagram oyunları için",
+  "must_add_words": "En az 3 kelime eklemelisiniz..",
+  "press_plus": "'+' ya Basın",
+  "try_adding_words": "Ve Ekrana Kelime Eklemeyi Deneyin."
 }
