--- a/my_words/lib/l10n/app_tr.arb
+++ b/my_words/lib/l10n/app_tr.arb
@@ -32,7 +32,7 @@
   "learning_statistic": "Öğrenme İstatistiği",
   "attention": "Dikkat",
   "add_at_least_3_words": "Quiz, Anagram ve Boşluk doldurma oyunlarına başlamadan önce en az 3 kelime eklemelisiniz",
-  "your_answer": "Cevabınız",
+  "your_answer": "Kontrol Et",
   "question": "Soru",
   "alert": "Uyarı",
   "before_games": "Quiz, Boşluk Doldurma ve Anagram oyunları için",
